--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<title>Event_Flyer</title>
 	<link href="screen.css" rel="stylesheet" type="text/css" />
 </head>
@@ -20,12 +20,11 @@
 	<p>Students completing a thesis are required to attend the Mandatory Thesis Meeting a minimum of one time. Additional attendance is optional, but open to all candidates.
 		However, there are no make-up meetings, as it occurs only once per semester. Therefore, first-time attendees with a date conflict or who are unable to attend should contact the Director of Academic Writing and Thesis Examiner, Dr. Patty
 		Johnson-Winston, in advance at winston@iit.edu for special arrangements.</p>
-		<p><a href="http://www.iit.edu/graduate_college/academic_affairs/dates_grad_students.shtml">Other Important Semester Deadlines for Degree Candidates (including examination and appointment deadlines)</a> </p>
-		<p>All degree candidates must be registered in a minimum of one credit hour in the semester of graduation. If you are not registered, contact Graduate Academic Affairs for more information.
+	<p><a href="http://www.iit.edu/graduate_college/academic_affairs/dates_grad_students.shtml">Other Important Semester Deadlines for Degree Candidates (including examination and appointment deadlines)</a> </p>
+	<p>All degree candidates must be registered in a minimum of one credit hour in the semester of graduation. If you are not registered, contact Graduate Academic Affairs for more information.
 		The Office of Graduate Academic Affairs is available to assist you with questions from 8:30 a.m. to 5:00 p.m., Monday through Friday, gradcoll@iit.edu, (312) 567-3024. </p>
 
-	<p>Sincerely, <br>
-		Graduate Academic Affairs <br>
+	<p>Graduate Academic Affairs <br>
 		Illinois Institute of Technology <br>
 		IIT Tower- 7th Floor <br>
 		10 West 35th Street <br>
@@ -34,4 +33,5 @@
 		gradcoll@iit.edu <br>
 		iit.edu/graduate_college/academic_affairs/ </p>
 </body>
+
 </html>
